# unifyapps-fdse-assignment

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  LICENSE  LOOM_SCRIPT.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.cline/: README.md
.cline/skills/autonomous-orchestrion-v3/: README.md  SKILL.md
.cline/skills/orchestrion-universal-agent-router/: README.md  SKILL.md
.github/workflows/: ci.yml  security.yml
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
docs/understand-anything-demo/: CHEATSHEET.md  crm_client.structure.json
samples/: 01-email-thread.eml  02-crm-export.json  03-csv-row.csv  04-handwritten-form.ocr.json  05-freeform-note.txt  06-ambiguous-snippet.txt  07-spreadsheet-paste.csv  08-replay-of-01.eml
src/agentic_onboard/: __init__.py  audit.py  circuit_breaker.py  cli.py  crm_client.py  ingest.py  logging_config.py  orchestrator.py  parser.py  schemas.py  settings.py
src/mock_crm/: __init__.py  server.py
tests/: conftest.py  test_audit.py  test_circuit_breaker.py  test_crm_client.py  test_ingest.py  test_logging_redaction.py  test_mock_crm.py  test_orchestrator.py  test_parser.py  test_schemas.py
