[project]
name = "agentic-onboard"
version = "0.1.0"
description = "Enterprise data + agentic workflow integration: S3 → LLM parser → resilient legacy CRM client. UnifyApps FDSE assignment submission."
authors = [{ name = "Prakhar Shekhar Parthasarthi", email = "prakhar.mnnit.2022@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["agentic", "llm", "etl", "resilience", "fdse", "unifyapps"]

dependencies = [
    "pydantic[email]>=2.7,<3",
    "pydantic-settings>=2.4,<3",
    "httpx>=0.27,<1",
    "tenacity>=9.0,<10",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "openai>=1.51,<2",          # OpenAI SDK is OpenRouter-compatible
    "rich>=13.7,<14",           # pretty terminal tables
    "typer>=0.12,<1",           # CLI
    "structlog>=24.4,<25",      # structured logs
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5.0,<6",
    "hypothesis>=6.112,<7",
    "ruff>=0.6,<1",
    "mypy>=1.11,<2",
    "respx>=0.21,<1",            # httpx mock
    "pre-commit>=3.8,<4",
]

[project.scripts]
agentic-onboard = "agentic_onboard.cli:app"
mock-crm = "mock_crm.server:main"

[project.urls]
Homepage = "https://github.com/praxstack/unifyapps-fdse-assignment"
Repository = "https://github.com/praxstack/unifyapps-fdse-assignment"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_onboard", "src/mock_crm"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F",   # pycodestyle, pyflakes
    "I",             # isort
    "B",             # flake8-bugbear
    "UP",            # pyupgrade
    "RUF",           # ruff-specific
    "SIM",           # flake8-simplify
    "C4",            # comprehensions
    "PT",            # pytest-style
    "S",             # bandit (security)
]
ignore = ["S101"]  # asserts in tests are fine

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "S105", "S106"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-q",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: requires the mock CRM running",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
# 70% threshold: the CLI (Typer commands) and the OpenRouterParser (requires
# OPENROUTER_API_KEY) are intentionally exercised by integration runs, not by
# CI unit tests. Hard-coverage on those paths would require either checking in
# a real key (no — see SECURITY) or making CI mock the LLM at the SDK level
# (low value). The remaining modules are at >=84% branch coverage.
fail_under = 70

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_return_any = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
